fixes #199